--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
-name = "template"
+name = "macros"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.81"
+futures = "0.3.30"
+tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
