--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
+darling = "0.20.8"
 proc-macro2 = "1.0.79"
 quote = "1.0.35"
 syn = { version = "2.0.57", features = ["extra-traits"] }
